package view;

import constants.Constants;
import controller.GameController;
import model.Bug;

import javax.swing.*;
import java.awt.*;
import java.awt.event.KeyAdapter;
import java.awt.event.KeyEvent;
import java.awt.event.MouseAdapter;
import java.awt.event.MouseEvent;
import java.util.ArrayList;

public class GamePanel extends JPanel {
    private ArrayList<Bug> bugs;
    private GameController gameController;

    public GamePanel() {
        this.setBounds(0, 0, Constants.BOARD_WIDTH, Constants.BOARD_HEIGHT);
        this.setLayout(null);
        this.bugs = new ArrayList<>();
        this.addMouseListener(new MouseAdapter() {
            public void mousePressed(MouseEvent me){
                gameController.handleClick(me.getX(),me.getY());
            }
        });
        this.addKeyListener(new KeyAdapter() {
            @Override
            public void keyPressed(KeyEvent e) {
                enterPressed(e);
            }
        });

    }

    //viene richiamato molte volte al secondo dal thread di java che si occupa della grafica (non da noi) e fa apparire sullo schermo le varie componenti grafiche(come un libricino che sfogli velocemnete)
    //override
    public void paintComponent(Graphics g) {
        //la classe super è il JPanel
        super.paintComponent(g);
        doDrawing(g);
    }
    //gestisce l'animazione degli insetti
    public void doDrawing(Graphics g) {
        this.drawGame(g);
        // Metodo che sincronizza tutte le componenti grafiche
        Toolkit.getDefaultToolkit().sync();
    }

    private void drawGame(Graphics g) {
        synchronized (this.bugs){
            for (Bug b:this.bugs) {
                //momento esatto in cui controlliamo il model
                g.drawImage(b.getImg(), b.getX(), b.getY(), this);
            }
        }
    }

    public void addBug(Bug bug) {
        synchronized (this.bugs){
            this.bugs.add(bug);
        }
    }
    public void removeBug(Bug bug) {
        synchronized (this.bugs){
            this.bugs.remove(bug);
        };
    }

    public void removeAllBugs(){
        synchronized (this.bugs){
            this.bugs = new ArrayList<>();
        }
    }

    public void setGameController(GameController gameController) {
        this.gameController = gameController;
    }
    public void enterPressed(KeyEvent e) {
        if (e.getKeyCode() == KeyEvent.VK_ENTER) {
            this.gameController.pauseGame();
        }
    }
}