@startuml

title JFLYSWATTER's Class Diagram


  
    namespace controller {
      class controller.GameController {
      }
    }
  
  

  
    namespace controller {
      class controller.GameLoop {
      }
    }
  
  

  
    namespace controller {
      class controller.MainController {
      }
    }
  
  

  
    namespace controller {
      class controller.MenuController {
      }
    }
  
  

  
    namespace model {
      abstract class model.Bug {
      }
    }
  
  

  
    namespace model {
      class model.Butterfly {
      }
    }
  
  

  
    namespace model {
      class model.Cockroach {
      }
    }
  
  

  
    namespace model {
      enum Direction {
      }
    }
  
  

  
    namespace model {
      class model.Fly {
      }
    }
  
  

  
    namespace model {
      class model.Ladybug {
      }
    }
  
  

  
    namespace model {
      class model.Swatter {
      }
    }
  
  

  
    namespace model {
      class model.Wasp {
      }
    }
  
  

  
    namespace view {
      class view.GamePanel {
      }
    }
  
  

  
    namespace view {
      class view.HUDPanel {
      }
    }
  
  

  
    namespace view {
      class view.MainView {
      }
    }
  
  

  
    namespace view {
      class view.MenuPanel {
      }
    }
  
  

  
    namespace view {
      class view.PausePanel {
      }
    }
  
  

  controller.GameController o-- view.GamePanel : gamePanel
  controller.GameController o-- view.HUDPanel : hudPanel
  controller.GameController o-- controller.MainController : mainController
  controller.GameController o-- view.PausePanel : pausePanel
  controller.GameController o-- model.Bug : bugs
  controller.GameLoop o-- controller.GameController : gameController
  controller.MainController o-- controller.GameController : gameController
  controller.MainController o-- view.GamePanel : gamePanel
  controller.MainController o-- view.HUDPanel : hudPanel
  controller.MainController o-- view.MainView : mainView
  controller.MainController o-- controller.MenuController : menuController
  controller.MainController o-- view.MenuPanel : menuPanel
  controller.MenuController o-- controller.MainController : mainController
  controller.MenuController o-- view.MenuPanel : menuPanel
  model.Bug o-- model.Direction : direction
  model.Butterfly -up-|> model.Bug
  model.Cockroach -up-|> model.Bug
  model.Fly -up-|> model.Bug
  model.Ladybug -up-|> model.Bug
  model.Wasp -up-|> model.Bug
  view.GamePanel o-- controller.GameController : gameController
  view.GamePanel o-- model.Bug : bugs



@enduml
